--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,16 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.angular-logo {
+  height: 100px;
+  width: 100px;
+}
+.react-logo {
+  height: 150px;
+  width: 150px;
+}
+.vue-logo {
+  height: 80px;
+  width: 80px;
+}
